# SCLEII_onlyOneLIbAddSeprt_oh

./: README.md
SCLEII_onlyOneLIbAddSeprt_oh_19.0.24215.1_install/include/: mymath.h
SCLEII_onlyOneLIbAddSeprt_oh_19.0.24215.1_install/lib/cmake/mymath/: MyMathTargets.cmake
external_app/: CMakeLists.txt  mymathApp.cc
src/: CMakeLists.txt  StdCmkLibExportInitInstallLkAddInstProj.txt
src/mymath/: CMakeLists.txt
src/mymathApp/: CMakeLists.txt
